# rgbd-simple-mapping

camera/: CMakeLists.txt  package.xml
camera/src/: l515_node.cpp
odom/: CMakeLists.txt  package.xml
odom/src/: odom_node.cpp
slam/: CMakeLists.txt  package.xml
slam/src/: slam_node.cpp
